K8s/pterodactyl/panel/node/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: gameserver-node-01
subsets:
  - addresses:
      - ip: 192.168.0.100 # ip of your game server running wings
    ports:
      - port: 443
