K8s/pterodactyl/panel/node/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gameserver-node-01
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 443
